--- a/packages/components/src/tour_tip/tour_tip.scss
+++ b/packages/components/src/tour_tip/tour_tip.scss
@@ -371,7 +371,7 @@
         background: rgba(0, 0, 0, 0.5);
 
         &--transparent {
-            background: none !important;
+            background: rgba(1, 1, 238, 0.2) !important;
         }
     }
 }
